--- a/app/package.json
+++ b/app/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
+  "name": "app",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "node ./src"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,6 @@
     "helmet": "^4.4.1",
     "morgan": "^1.10.0",
     "neode": "^0.4.7",
-    "nodemon": "^2.0.7",
     "request": "^2.88.2",
     "uuid": "^8.3.2"
   }
