--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -7,6 +7,7 @@
     "socket.io": "^3.1.0"
   },
   "scripts": {
-    "serve": "nodemon server.js"
+    "serve": "node server.js",
+    "dev": "nodemon server.js"
   }
 }
